Test Projects section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
                 </p>
             </div>
         </section>   
-        <section class="second">
-            The individual cards will come here.
+        <section class="row" id="projects">
+            <div class="small-8 large-6 small-centered columns">
+                <h2>Program Manager, Microsoft</h2>
+                <span class="pull-right">Fake Date - Fake Date</span>
+                <ul>
+                    <li>Did this cool thing</li>
+                    <li>Did this too</li>
+                </ul>
+            </div>
         </section>
         
         
