--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <body>
         <section class="row" id="cover">
-            <div class="small-8 large-6 small-centered columns">
+            <div class="small-8 small-centered columns">
                 <h1>Hello, world!</h1>
                 <p>
                     I'm Neil Satra and I like solving problems. I'm a tinkerer, a day-dreamer, a creator. I'm out to leverage my product developer skills to maximize my impact on the world. While I'm <a href="status.html">creating</a> this website, check out the links below.
