--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="css/app.css" />
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,900|PT+Sans:400,700|Roboto+Slab:400,300|Open+Sans:400,300,800|Vollkorn' rel='stylesheet' type='text/css'>
         <script src="bower_components/modernizr/modernizr.js"></script>
+        <script type="text/javascript">
+            window.analytics||(window.analytics=[]),window.analytics.methods=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group","on","once","off"],window.analytics.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),window.analytics.push(a),window.analytics}};for(var i=0;window.analytics.methods.length>i;i++){var method=window.analytics.methods[i];window.analytics[method]=window.analytics.factory(method)}window.analytics.load=function(t){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n)},window.analytics.SNIPPET_VERSION="2.0.8",
+            window.analytics.load("2o6xsy47i0");
+            window.analytics.page();
+        </script>
     </head>
     
     
